--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^9.3.1",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -24,6 +25,16 @@
     "css-entry-webpack-plugin": "^1.0.0-beta.4",
     "css-loader": "^1.0.1",
     "cssnano": "^4.1.7",
+    "eslint": "^5.14.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-import-resolver-webpack": "^0.11.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-vue": "^5.2.1",
+    "eslint-watch": "^5.1.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "fingerprintjs2": "^1.8.6",
     "jquery": "^3.3.1",
