--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "webpack.config.js",
   "scripts": {
     "build:dev": "webpack --mode development --config webpack.config.js --colors --hot --watch",
-    "build:prod": "webpack --mode production --config webpack.config.js --colors"
+    "build:prod": "webpack --mode production --config webpack.config.js --colors",
+    "build:analyzer": "webpack --mode production --config webpack.config.js --colors --analyzer"
   },
   "author": "",
   "license": "ISC",
@@ -44,7 +45,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.22.2",
     "node-sass": "^4.10.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "popper.js": "^1.14.6",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^0.5.1",
