--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "autoprefixer": "^9.3.1",
-    "axios": "^0.18.0",
+    "axios": "^0.21.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
@@ -28,11 +28,14 @@
     "babel-preset-stage-3": "^6.24.1",
     "bootstrap": "^4.1.3",
     "bootstrap-toggle": "^2.2.2",
-    "chart.js": "^2.7.3",
+    "bootstrap4-toggle": "^3.6.1",
+    "chart.js": "^2.9.4",
+    "chartjs-plugin-annotation": "^0.5.7",
     "copy-dir": "^0.4.0",
     "css-entry-webpack-plugin": "^1.0.0-beta.4",
     "css-loader": "^1.0.1",
     "cssnano": "^4.1.7",
+    "d3": "^6.7.0",
     "eslint": "^5.14.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-friendly-formatter": "^4.0.1",
@@ -45,47 +48,45 @@
     "eslint-watch": "^5.1.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "fingerprintjs2": "^1.8.6",
+    "intersection-observer": "^0.12.0",
     "jquery": "^3.3.1",
     "jquery-circle-progress": "^1.2.2",
     "js-cookie": "^2.2.0",
+    "just-detect-adblock": "^1.1.0",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.22.2",
+    "ng2-charts": "^2.4.2",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "popper.js": "^1.14.6",
     "postcss-loader": "^3.0.0",
+    "progressbar.js": "^1.1.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "sweetalert2": "^11.0.7",
     "vue": "^2.5.17",
+    "vue-enhanced-check": "^1.5.5",
+    "vue-google-adsense": "^1.9.3",
+    "vue-js-toggle-button": "^1.3.3",
     "vue-loader": "^15.4.2",
+    "vue-range-component": "xwpongithub/vue-range-slider",
     "vue-router": "^3.5.1",
+    "vue-script2": "^2.1.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.0.1",
     "webpack": "^4.26.1",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.2.3",
     "webpack-merge": "^4.2.2",
     "webpackbar": "^4.0.0",
-    "yargs-parser": "^16.1.0"
+    "yargs-parser": "^18.1.2"
   },
   "description": "",
   "devDependencies": {
     "babel-core": "^6.26.3"
-  },
-  "browserslist": [
-    "> 1%",
-    "ie >= 8",
-    "edge >= 15",
-    "ie_mob >= 10",
-    "ff >= 45",
-    "chrome >= 45",
-    "safari >= 7",
-    "opera >= 23",
-    "ios >= 7",
-    "android >= 4",
-    "bb >= 10"
-  ]
+  }
 }
