--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/eslint-parser": "^7.18.2",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-json-strings": "^7.13.8",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -68,6 +69,7 @@
     "sweetalert2": "^11.0.7",
     "vue": "^2.5.17",
     "vue-enhanced-check": "^1.5.5",
+    "vue-eslint-parser": "^9.0.3",
     "vue-google-adsense": "^1.9.3",
     "vue-js-toggle-button": "^1.3.3",
     "vue-loader": "^15.4.2",
