--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-
-/node_modules/
-/vendor/
-package-lock.json
+/node_modules
+.env
+.env.backup
+.phpunit.result.cache
+.vscode
+.DS_Store
 composer.lock
-/dist
-/config/config.php
-
-
+package-lock.json
