--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,33 @@
 {
   "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react",
+      [
+          "@babel/preset-env",
+          {
+              "useBuiltIns": "entry",
+              "corejs": {
+                  "version": 3,
+                  "proposals": false
+              }
+          }
+      ],
+      "@babel/preset-react"
   ],
   "plugins": [
       "@babel/plugin-proposal-class-properties",
       "@babel/plugin-proposal-json-strings",
+      "@babel/plugin-proposal-nullish-coalescing-operator",
       "@babel/plugin-syntax-dynamic-import",
-      "@babel/plugin-syntax-import-meta",
-  ]
+      "@babel/plugin-syntax-import-meta"
+  ],
+  "env": {
+      "production": {
+          "plugins": [
+              [
+                  "transform-remove-console", {
+                      "exclude": ["error", "warn"]
+                  }
+              ]
+          ]
+      }
+  }
 }
