--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "js-cookie": "^2.2.0",
     "js-video-url-parser": "^0.5.1",
     "just-detect-adblock": "^1.1.0",
+    "marked": "^1.1.1",
     "md5": "^2.3.0",
     "moment": "^2.29.3",
     "node-pre-gyp": "^0.13.0",
@@ -74,8 +75,13 @@
     "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
+    "@storybook/addon-actions": "^6.3.9",
+    "@storybook/addon-essentials": "^6.5.7",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/vue": "^6.5.7",
     "@vue/cli": "^4.5.15",
     "@vue/compiler-sfc": "^3.2.29",
+    "@vue/test-utils": "^1.1.2",
     "autoprefixer": "^9.8.8",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.3",
