--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "vue-router": "^4.0.12",
     "vue-template-compiler": "^2.6.10",
     "vue3-perfect-scrollbar": "^1.6.0",
-    "vuedraggable": "^4.1.0"
+    "vuedraggable": "^4.1.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
@@ -118,7 +119,6 @@
     "vue-jest": "^3.0.7",
     "vue-loader": "^17.0.0",
     "vue-style-loader": "^4.1.3",
-    "vuex": "^4.0.2",
     "webpack": "^5.65.0",
     "webpack-build-notifier": "^2.3.0",
     "webpack-bundle-analyzer": "^4.5.0",
