--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,18 @@
 {
+    "name": "apan1121/draw-card2",
+    "autoload": {
+        "psr-4": {
+            "Apan1121\\DrawCard2\\": "src/",
+            "Service\\" : "crawler/Service"
+        }
+    },
+    "authors": [
+        {
+            "name": "byron",
+            "email": "byron@pressplay.cc"
+        }
+    ],
     "require": {
-        "phpmailer/phpmailer": "^6.4"
+        "google/apiclient": "^2.0"
     }
 }
