--- a/package.json
+++ b/package.json
@@ -44,21 +44,24 @@
     "jquery-slimscroll": "^1.3.8",
     "js-cookie": "^2.2.0",
     "js-video-url-parser": "^0.5.1",
+    "json-2-csv": "^3.18.0",
     "just-detect-adblock": "^1.1.0",
     "marked": "^1.1.1",
     "md5": "^2.3.0",
     "moment": "^2.29.3",
     "node-pre-gyp": "^0.13.0",
+    "papaparse": "^5.3.2",
     "popper.js": "^1.14.4",
     "recaptcha2": "^1.3.2",
     "regenerator-runtime": "^0.13.9",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.3.0",
     "svgxuse": "^1.2.6",
-    "sweetalert2": "^7.28.4",
+    "sweetalert2": "^11.7.1",
     "v-select2-component": "^0.4.3",
     "vue": "^3.2.29",
     "vue-datepicker-next": "^1.0.2",
+    "vue-i18n": "^9.2.2",
     "vue-perfect-scrollbar": "^0.2.0",
     "vue-router": "^4.0.12",
     "vue-template-compiler": "^2.6.10",
@@ -76,10 +79,6 @@
     "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
-    "@storybook/addon-actions": "^6.3.9",
-    "@storybook/addon-essentials": "^6.5.7",
-    "@storybook/addon-links": "^6.3.8",
-    "@storybook/vue": "^6.5.7",
     "@vue/cli": "^4.5.15",
     "@vue/compiler-sfc": "^3.2.29",
     "@vue/test-utils": "^1.1.2",
